Bug 109561 - [regression, bisected] code re-factor causing games to stutter or lock-up system
Summary: [regression, bisected] code re-factor causing games to stutter or lock-up system
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: mesa-19.0
  Show dependency treegraph
 
Reported: 2019-02-06 00:26 UTC by Timothy Arceri
Modified: 2019-02-25 22:57 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix some issues (4.98 KB, patch)
2019-02-06 21:13 UTC, Nicolai Hähnle
Details | Splinter Review

Description Timothy Arceri 2019-02-06 00:26:20 UTC
The following commit cause bad stuttering in the Batman Arkham City benchmark (note when testing this game is 32bit). It also causes No Mans Sky to freeze my system.

Link to No Mans Sky api trace below. Needs the following environment variables set when running apitrace:

force_glsl_extensions_warn=true allow_glsl_layout_qualifier_on_function_parameters=true

https://drive.google.com/open?id=1xFl7Uzfr75aODC0ljP8hC5OYRxgtuCan

commit e0f0d3675d462aad4ca30e4383a3530d46e6e85d
Author: Nicolai Hähnle <nicolai.haehnle@amd.com>
Date:   Tue Sep 18 15:52:17 2018 +0200

    radeonsi: factor si_query_buffer logic out of si_query_hw
    
    This is a move towards using composition instead of inheritance for
    different query types.
    
    This change weakens out-of-memory error reporting somewhat, though this
    should be acceptable since we didn't consistently report such errors in
    the first place.
    
    Reviewed-by: Marek Olšák <marek.olsak@amd.com>
Comment 1 Nicolai Hähnle 2019-02-06 21:13:00 UTC
Created attachment 143321 [details] [review]
fix some issues

I cannot reproduce the hang, unfortunately. What hardware do you get the hang with?

There is some flickering on Polaris, which gets worse with the commit you bisected this to. The attached patch reduces the flicker back to the pre-commit level. Though it's essentially Marek's patch, plus an additional minor fix.

I have yet to try the Batman issue.
Comment 2 Timothy Arceri 2019-02-06 21:33:28 UTC
(In reply to Nicolai Hähnle from comment #1)
> Created attachment 143321 [details] [review] [review]
> fix some issues
> 
> I cannot reproduce the hang, unfortunately. What hardware do you get the
> hang with?

Vega 64
Comment 3 Timothy Arceri 2019-02-06 21:57:23 UTC
The fix doesn't apply to master.
Comment 4 Nicolai Hähnle 2019-02-07 08:23:14 UTC
Yeah, sorry, I wrote the patch directly on top of the offending commit for testing purposes.
Comment 5 Timothy Arceri 2019-02-12 04:21:24 UTC
(In reply to Nicolai Hähnle from comment #1)
> Created attachment 143321 [details] [review] [review]
> fix some issues
> 
> I cannot reproduce the hang, unfortunately. What hardware do you get the
> hang with?
> 
> There is some flickering on Polaris, which gets worse with the commit you
> bisected this to. The attached patch reduces the flicker back to the
> pre-commit level. Though it's essentially Marek's patch, plus an additional
> minor fix.
> 
> I have yet to try the Batman issue.

I can confirm this patch fixes the hang in No Mans Sky.
Comment 6 Timothy Arceri 2019-02-17 23:14:08 UTC
(In reply to Nicolai Hähnle from comment #4)
> Yeah, sorry, I wrote the patch directly on top of the offending commit for
> testing purposes.

Any chance you can send out the second fix for review? It seems to fix my issues.
Comment 7 Marek Olšák 2019-02-20 04:29:19 UTC
The fix doesn't apply to master. Also, it would be nice to get it into 19.0 before it's released. (originally it should have been released today)
Comment 8 Timothy Arceri 2019-02-25 22:57:17 UTC
Updated fix pushed. No Mans Sky no longer hangs. Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.